--- a/src/app/component/profile/profile.component.jade
+++ b/src/app/component/profile/profile.component.jade
@@ -6,7 +6,7 @@ div.content
                 | Профиль
         .row
             load-img
-                img([src]="imageurl", (click)="onOpenImage()")
+                img([src]="imageurl || 'src/img/no-avatar.gif' ", (click)="onOpenImage()")
                 .row {{name}}
 
                 input(type="file" id="files" name="files[]" multiple="", style="display: none")
