--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -28,13 +28,14 @@ table {
         width: 60px;
       }
     }
-  }
-}
-.icoUser{
-  width: 40px;
-  img{
-    display: block;
-    width: 34px;
-    height: 34px;
+    &.icoUser{
+      width: 40px;
+      padding: 0;
+      img{
+        display: block;
+        width: 34px;
+        height: 34px;
+      }
+    }
   }
 }
