--- a/src/app/component/menu/menu-login/menu-login.component.jade
+++ b/src/app/component/menu/menu-login/menu-login.component.jade
@@ -18,6 +18,9 @@ div((click)="$event.stopPropagation();$event.preventDefault()" )
         li
             div((click)="goDevice()") Устройства
         li
+            div((click)="goToFriends()") Друзья
+        li
+
             div((click)="onExit($event)") Выйти
         //.button-container
             div()
