--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -6,7 +6,9 @@
 @warning-background: #ffd263;
 @success-background: #7ddc74;
 @box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-
+*{
+  color: @main-text-color;
+}
 .button-container>div{
   float: right;
   margin-top: 15px;
