--- a/index.jade
+++ b/index.jade
@@ -44,6 +44,9 @@ html(lang='en')
                 width: 100%;
                 height: 100%;
             }
+            .gray{
+                color: darkgray;
+            }
             .clear, .border-hidden {
                 float: none!important;
                 clear: both!important;
