--- a/src/app/component/friends-component/friends-component.jade
+++ b/src/app/component/friends-component/friends-component.jade
@@ -5,6 +5,7 @@ div.content
             p
                 | Друзья
         .row
+            .gray в разработке
             .border-hidden
                 div()
                     button( style="float: right", (click)="getAllUsers($event)") Просмотреть участников
@@ -18,5 +19,5 @@ div.content
                                 img([src]="user.image || 'src/img/no-avatar.gif' ")
                             td {{user.name}}
                             td
-                                .invite
-                                    | Пригласить (в разработке)
+                                .invite((click)="sendInvite(user)")
+                                    | Отправть запрос
