--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -3,6 +3,8 @@ table
         td.button.menu((click)="onOpenAthlete()") Участники
         td.button.menu( (click)="onOpen()" ) Маршруты
         td
+        td.bell
+            .num(*ngIf="invites.length") {{invites.length}}
         td.icoUser
             img([src]="as.userImage || 'src/img/no-avatar.gif' ", (click)="goToProfile()")
         td.button.enter( (click)="onOpenLogin()")
