--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -37,6 +37,24 @@ table {
         height: 34px;
       }
     }
+    &.bell{
+      padding: 0;
+      width: 50px;
+      background: url("src/img/bell.png") no-repeat center;
+      background-size: 64%;
+      position: relative;
+      .num{
+        font-size: 10px;
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        background: greenyellow;
+        padding: 4px;
+        font: 12px/6px sans-serif;
+        text-align: center;
+        border-radius: 50%;
+      }
+    }
   }
 }
 @media screen and (max-width: 450px){
