--- a/src/app/component/friends-component/friends-component.less
+++ b/src/app/component/friends-component/friends-component.less
@@ -16,10 +16,14 @@ users-container{
   display: block;
   overflow-y: auto;
   td{
+    width: 33.3%;
     border-bottom: 1px solid #cfdcef;
     padding: 5px 0;
   }
 
+}
+h4{
+  padding: 8px 0;
 }
 .invite{
   font-size: 12px;
