--- a/src/app/component/menu/menu-athlete/menu.athlete.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.less
@@ -17,8 +17,8 @@ ul li{
 }
 .status{
   float: left;
-  width: 20px;
-  height: 20px;
+  width: 60px;
+  height: 60px;
   margin-top: -2px;
   border-radius: 50%;
   box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
@@ -29,13 +29,17 @@ ul li{
     background: #2ff63a;
   }
   &.arrow{
-    background: url("src/sprite/sprite.png");
-    background-size: 20px 80px;
-    box-shadow:none;
-    transform: rotate(45deg);
+    background: #3690f6;
   }
+  padding: 5px;
+}
+img{
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 .name{
-  margin-left: 25px;
+  text-align: right;
+  margin-left: 70px;
   margin-bottom: 8px;
 }
