--- a/src/app/component/menu/menu-athlete/menu.athlete.component.jade
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.jade
@@ -4,7 +4,6 @@ ul((click)="$event.stopPropagation()")
         .status([ngClass]="device.marker.status")
             img([src]="device.image || 'src/img/no-avatar.gif' ", )
         div.name {{device.name}}
-
+        div.passed(*ngIf="device.marker") 0 {{device.marker.elapsed}}
         .border-hidden
-        div.passed {{device.passed}}
 
