get last position

--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -40,7 +40,7 @@ table {
     &.bell{
       padding: 0;
       width: 50px;
-      background: url("src/img/bell.png") no-repeat center;
+      background: url("src/img/friends.png") no-repeat center;
       background-size: 64%;
       position: relative;
       .num{
