--- a/src/app/component/device/device.component.jade
+++ b/src/app/component/device/device.component.jade
@@ -25,9 +25,9 @@ div.content
                            // button((click)='onDel($event, i)') {{btnPreDel.index}}
                     tr
                         td
-                            input(type='text', [(ngModel)]='device.name')
+                            input(type='text', [(ngModel)]='device.name', placeholder="{{user.name}}")
                         td
-                            input(type='text', [(ngModel)]='device.id')
+                            input(type='text', [(ngModel)]='device.id', placeholder="88888888888")
                         td
                             input(type='text', [(ngModel)]='device.phone')
                         td
