--- a/src/app/component/device/device.component.less
+++ b/src/app/component/device/device.component.less
@@ -96,10 +96,22 @@ help-container{
   overflow: auto;
   font-size: 12px;
   width: 100%;
-  img{
-    width: 120px;
-    height: 200px;
+  *{
+    box-sizing: border-box;
   }
+  table{
+    img{
+      width: 120px;
+      height: 200px;
+    }
+  }
+  img.ico{
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin-right: 10px;
+  }
+
   td:nth-child(3){
     width: 30%;
   }
