--- a/src/app/component/friends-component/friends-component.less
+++ b/src/app/component/friends-component/friends-component.less
@@ -28,6 +28,14 @@ h4{
   font-size: 12px;
   float: right;
   cursor: pointer;
+  margin-left: 20px;
+  &.accept{
+    color: @blue-color;
+    font-weight: bold;
+  }
+  &.reject{
+    color: gray;
+  }
 }
 .content{
   position: absolute;
