--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -1,6 +1,9 @@
 @menu-hover: white;
 @main-menu-color: linear-gradient(to bottom, #dae0ea 0%, #e9ebee 20%, #e9ebee 100%);
 @main-border-color: #9ba8b2;
+@main-border-color: #9ba8b2;
+@green-color: #3a9d31;
+@blue-color: dodgerblue;
 @main-text-color: #444a56;
 @danger-background: red;
 @warning-background: #ffd263;
