--- a/src/app/component/device/device.component.jade
+++ b/src/app/component/device/device.component.jade
@@ -36,14 +36,14 @@ div.content
 
         .border-hidden
         .row
-            .bnt-help((click)="onShowHelp()") &#9660; ?
+            div
+                .bnt-help((click)="onShowHelp()") &#9660; ?
             help-container(*ngIf="showHelp")
                 .help
-                    .row
-                        div
-                            a(href='https://play.google.com/store/apps/details?id=com.mendhak.gpslogger', target="_blank")
-                                img.ico(src="src/img/help/ico.webp")
-                            a(href='https://play.google.com/store/apps/details?id=com.mendhak.gpslogger' , target="_blank") GPS-логгер (GPS Logger)
+                    //.row
+                    a(href='https://play.google.com/store/apps/details?id=com.mendhak.gpslogger', target="_blank")
+                        img.ico(src="src/img/help/ico.webp")
+                    a(href='https://play.google.com/store/apps/details?id=com.mendhak.gpslogger' , target="_blank") GPS-логгер (GPS Logger)
                     table
                         tbody
                             tr
@@ -65,7 +65,7 @@ div.content
 
                                 td
                                     p
-                                        | Иденификато
+                                        | Идентификатор
                                         span  12 цифр
                             tr
                                 td
