--- a/src/app/component/menu/menu-login/menu-login.component.jade
+++ b/src/app/component/menu/menu-login/menu-login.component.jade
@@ -20,7 +20,7 @@ div((click)="$event.stopPropagation();$event.preventDefault()" )
             li((click)="goToFriends()")
                 div Друзья
 
-            li((click)="goPrivatZone()")
+            li((click)="goToPrivateArea()")
                 div Приватные зоны
 
             li((click)="goDevice()")
