--- a/src/app/component/private-area/private-area.jade
+++ b/src/app/component/private-area/private-area.jade
@@ -1,3 +1,6 @@
-//
-   Created by maxislav on 09.01.17.
-
+div.content
+    div
+        .close((click)="onClose()") &times;
+        users-container
+            .row
+                p Приватные зоны (в разработке..)
