--- a/src/app/component/private-area/private-area.jade
+++ b/src/app/component/private-area/private-area.jade
@@ -4,3 +4,6 @@ div.content
         users-container
             .row
                 p Приватные зоны (в разработке..)
+            .row
+                div.button.add((click)="onDrawArea()") Добавить
+            .border-hidden
