--- a/src/app/component/private-area/private-area.less
+++ b/src/app/component/private-area/private-area.less
@@ -20,6 +20,11 @@
     padding: 30px;
   }
 }
+.button.add{
+  float: right;
+  cursor: pointer;
+  text-decoration: underline;
+}
 .close{
   position: absolute;
   right: 0;
