--- a/src/app/component/private-area/private-area.less
+++ b/src/app/component/private-area/private-area.less
@@ -35,3 +35,33 @@
   font-size: 20px;
   font: 30px/15px bold;
 }
+.table{
+  width: 100%;
+  .cell{
+    width: 25%;
+    padding: 8px 0;
+    vertical-align: middle;
+  }
+  .del{
+    padding: 0;
+    &>div{
+      float: right;
+      cursor: pointer;
+      padding: 8px;
+    }
+  }
+
+}
+.saves-area:hover{
+  background-color: rgba(255, 0 ,0, 0.2);
+}
+
+@media screen and (max-width: 600px){
+  .content{
+    position: relative;
+    width: 100%;
+    min-width: inherit;;
+    left: 0;
+    margin-left: 0;
+  }
+}
