--- a/src/app/component/menu/menu-athlete/menu.athlete.component.jade
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.jade
@@ -1,5 +1,20 @@
 ul((click)="$event.stopPropagation()")
-    li(*ngFor="let device of devices\; let i = index", (click)="selectDevice(device)")
+
+    li(*ngFor="let device of userDevices\; let i = index", (click)="selectDevice(device)")
+        .status([ngClass]="device.marker ? device.marker.status : null")
+            img([src]="device.image || 'src/img/no-avatar.gif' " )
+        div.name {{device.name}}
+        div.passed(*ngIf="device.marker")  {{device.marker.elapsed}}
+        .border-hidden
+    li(*ngFor="let device of friendDevices\; let i = index", (click)="selectDevice(device)")
+        .status([ngClass]="device.marker ? device.marker.status : null")
+            img([src]="device.marker ? device.marker.image : 'src/img/no-avatar.gif' " )
+        div.name {{device.name}}
+        div.passed(*ngIf="device.marker")  {{device.marker.elapsed}}
+        .border-hidden
+
+
+    //li(*ngFor="let device of devices\; let i = index", (click)="selectDevice(device)")
         //.status(*ngIf="device.marker", [ngClass]="device.marker.status")
         .status([ngClass]="device.marker ? device.marker.status : null")
             img([src]="device.image || 'src/img/no-avatar.gif' ", )
