--- a/src/app/component/menu/menu-athlete/menu.athlete.component.jade
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.jade
@@ -2,7 +2,7 @@ ul((click)="$event.stopPropagation()")
 
     li(*ngFor="let device of userDevices\; let i = index", (click)="selectDevice(device)")
         .status([ngClass]="device.marker ? device.marker.status : null")
-            img([src]="device.image || 'src/img/no-avatar.gif' " )
+            img([src]="device.marker ? device.marker.image : 'src/img/no-avatar.gif' " )
         div.name {{device.name}}
         div.passed(*ngIf="device.marker")  {{device.marker.elapsed}}
         .border-hidden
