--- a/src/app/component/private-area/private-area.less
+++ b/src/app/component/private-area/private-area.less
@@ -25,6 +25,10 @@
   cursor: pointer;
   text-decoration: underline;
 }
+.help{
+  font-size: 12px;
+  color: gray;
+}
 .close{
   position: absolute;
   right: 0;
