--- a/src/app/component/menu/menu-athlete/menu.athlete.component.jade
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.jade
@@ -12,6 +12,12 @@ ul((click)="$event.stopPropagation()")
         div.name {{device.name}}
         div.passed(*ngIf="device.marker")  {{device.marker.elapsed}}
         .border-hidden
+    li(*ngFor="let device of otherDevices\; let i = index", (click)="selectDevice(device)")
+        .status([ngClass]="device.marker ? device.marker.status : null")
+            img([src]="device.marker ? device.marker.image : 'src/img/no-avatar.gif' " )
+        div.name {{device.name}}
+        div.passed(*ngIf="device.marker")  {{device.marker.elapsed}}
+        .border-hidden
 
 
     //li(*ngFor="let device of devices\; let i = index", (click)="selectDevice(device)")
