--- a/src/app/component/friends-component/friends-component.less
+++ b/src/app/component/friends-component/friends-component.less
@@ -28,6 +28,7 @@ h4{
   font-size: 12px;
   float: right;
   cursor: pointer;
+  text-align: right;
   margin-left: 20px;
   &.accept{
     color: @blue-color;
