--- a/src/app/css/map.component.less
+++ b/src/app/css/map.component.less
@@ -34,5 +34,15 @@
         border-radius: 50%;
       }
     }
+    .track-icon{
+      width: 20px;
+      height: 20px;
+      &>div{
+        width: 100%;
+        height: 100%;
+        background: url("src/sprite/sprite.png") no-repeat left top;
+        background-size: 20px 80px;
+      }
+    }
   }
 }
