Add weather borispol map

--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -37,6 +37,22 @@ table {
         height: 34px;
       }
     }
+    &.fill-space{
+      width: 100%;
+    }
+    &.weather{
+      width: 40px;
+      &.active{
+        background-color: #afdced;
+      }
+
+      .weather-ico{
+        width: 40px;
+        height: 40px;
+        background: url("src/img/weather-ico.png") no-repeat center;
+        background-size: 80%;
+      }
+    }
     &.bell{
       padding: 0;
       width: 50px;
