--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -2,16 +2,18 @@ table
     tr
         td.button.menu((click)="onOpenAthlete()") Участники
         td.button.menu( (click)="onOpen()" ) Маршруты
-        td
+        td.button.weather([class.active]="weatherLayer")
+            .weather-ico((click)="onWeather()")
+        td.fill-space
         td.bell((click)="goToFriends()")
             .num(*ngIf="invites.length") {{invites.length}}
         td.icoUser()
             img([src]="user.image || 'src/img/no-avatar.gif' ", (click)="goToProfile()")
         td.button.enter( (click)="onOpenLogin()")
             |{{user.name || 'Войти' }}
-menu-athlete(*ngIf="ms.menuAthlete")
-menu-track(*ngIf="ms.menuOpen")
-menu-track-load(*ngIf="ms.menuLoadOpen")
-track-list(*ngIf="trackList.length", [style.top]="ms.menuOpen ?  '150px' : '100%' ")
-menu-login(*ngIf="ms.menuOpenLogin")
+menu-athlete(*ngIf="menuService.menuAthlete")
+menu-track(*ngIf="menuService.menuOpen")
+menu-track-load(*ngIf="menuService.menuLoadOpen")
+track-list(*ngIf="trackList.length", [style.top]="menuService.menuOpen ?  '150px' : '100%' ")
+menu-login(*ngIf="menuService.menuOpenLogin")
 device-list()
