--- a/src/app/css/map.component.less
+++ b/src/app/css/map.component.less
@@ -4,45 +4,39 @@
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  mapbox-gl{
+  mapbox-gl {
     display: block;
     width: 100%;
     height: 100%;
 
-    .mapboxgl-popup-content{
-      padding: 5px;
-      font: 12px/12px  Geneva, Arial, Helvetica, sans-serif;
-      font-size: 14px;
-    }
-    .user-icon{
-      border-radius: 50%;
-      background: white;
-      &[status=yellow]{
-        background: yellow;
-      }
-      &[status=green]{
-        background: #2ff63a;
-      }
-      &[status=arrow]{
-        background: #3690f6;
-      }
-      img{
-        display: block;
-        width: 34px;
-        height: 34px;
-        padding: 3px;
-        border-radius: 50%;
-      }
-    }
-    .track-icon{
-      width: 20px;
-      height: 20px;
-      &>div{
-        width: 100%;
-        height: 100%;
-        background: url("src/sprite/sprite.png") no-repeat left top;
-        background-size: 20px 80px;
-      }
-    }
+  }
+
+}
+
+:host /deep/ .mapboxgl-popup-content {
+  padding: 5px;
+  font: 12px/12px  Geneva, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+:host /deep/ .user-icon {
+  border-radius: 50%;
+  background: white;
+  &[status=yellow] {
+    background: yellow;
+  }
+  &[status=green] {
+    background: #2ff63a;
+  }
+  &[status=arrow] {
+    background: #3690f6;
+  }
+  img {
+    display: block;
+    width: 34px;
+    height: 34px;
+    padding: 3px;
+    border-radius: 50%;
   }
 }
+
