--- a/index.jade
+++ b/index.jade
@@ -16,7 +16,7 @@ html(lang='en')
         base(href="/")
         link(rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css")
         //script(src='node_modules/core-js/client/shim.min.js')
-        script(src='node_modules/zone.js/dist/zone.min.js')
+        script(src='node_modules/zone.js/dist/zone.js')
         script(src='node_modules/reflect-metadata/Reflect.js')
         script(src='node_modules/systemjs/dist/system.js')
         script(src='systemjs.config.js')
