--- a/src/app/component/menu/track-list/track-list.less
+++ b/src/app/component/menu/track-list/track-list.less
@@ -1,7 +1,8 @@
+@import "../../../css/constant";
 :host{
   position: absolute;
   top: calc(~"100% + 100px");
-  background: rgba(0,0,0,0.8);
+  background: rgba(255,255,255,0.8);
   z-index: 2;
   padding: 8px;
   min-width: 200px;
@@ -10,12 +11,11 @@
 .del{
   cursor: pointer;
   display: block;
-
+  color: darkred;
 }
 .go{
   cursor: pointer;
   display: block;
-//  float: right;
   margin-right: 10px;
   //padding: 8px;
   &:active{
@@ -24,14 +24,35 @@
     box-shadow: inset 0 0 20px black;
   }
 }
+.title, .action{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 0;
+}
+.route-points{
+  background: url("src/img/ico-route-points.png") no-repeat center;
+  background-size: 80%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+
+}
+.color{
+  margin-left: 5px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
 li{
   //padding: 8px;
   color: black;
-  display: flex;
-  justify-content: space-between;
+  border-bottom: 1px solid @main-border-color;
+
+
   align-items: center;
   &>div{
-    padding: 8px;
+   // padding: 8px;
   }
   .download{
     height: 30px;width: 30px;
