--- a/src/app/css/map.component.less
+++ b/src/app/css/map.component.less
@@ -49,3 +49,14 @@
     background-size: 20px 80px;
   }
 }
+:host /deep/ .info-point{
+  &>div{
+    margin: 5px 0;
+  }
+  button{
+    background: none;
+    color:  gray;
+    border: none;
+    outline: none;
+  }
+}
