--- a/src/app/component/journal-component/journal.component.less
+++ b/src/app/component/journal-component/journal.component.less
@@ -30,6 +30,29 @@
   font-size: 20px;
   font: 30px/15px bold;
 }
+.title-row{
+  margin: 15px 0;
+  display: flex ;
+  justify-content: space-between;
+  align-items: center;
+  p{
+    width: 50%;
+  }
+}
+.steps{
+
+  display: flex ;
+  justify-content: space-between;
+  width: 50%;
+  .btn{
+    cursor: pointer;
+  }
+}
+.scroll{
+  //max-height: 60%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 .row{
   margin: 0 -15px;
   &>p{
