--- a/src/app/component/journal-component/one-track.component/one-track.component.jade
+++ b/src/app/component/journal-component/one-track.component/one-track.component.jade
@@ -1,3 +1,7 @@
 .content
-    .info Map {{track}}
+    .info
+        .date
+            |{{ trackDate | date: 'dd/MM/yyyy'}}
+        .show-on-map((click)="showOnMap()") Просмотреть на главной карте
+
     .map
