--- a/src/app/component/journal-component/one-track.component/one-track.component.less
+++ b/src/app/component/journal-component/one-track.component/one-track.component.less
@@ -7,6 +7,17 @@
   display: flex;
   justify-content: space-between;
 }
+.info>div{
+  margin-bottom:  15px;
+
+}
+
+.date{
+  color: @blue-color;
+}
+.show-on-map{
+  cursor: pointer;
+}
 .map{
   width: 300px;
   height: 150px;
