--- a/src/app/component/journal-component/journal.component.jade
+++ b/src/app/component/journal-component/journal.component.jade
@@ -2,10 +2,14 @@ div.content
     div
         .close((click)="onClose()") &times;
         .row
-            p
-                | В разработке
-        .row
-            one-track([track]="list[0]")
-            one-track([track]="list[1]")
-           // one-track()
+            .title-row
+                p
+                    | В разработке
+                .steps
+                    .back.btn((click)="stepGo(-1)") &#9668;
+                    .date {{selectDate | date: 'dd/MM/yyyy'}}
+                    .forward.btn((click) = "stepGo(1)") &#9658;
+        .scroll
+            .row(*ngFor="let item of list; let i = index;")
+                one-track([track]="list[i]")
 
